  * DBody.getGeomIterator()
  * DBody.getFirstGeom() is no longer deprecated
  * Simpler construction methods for DConvex
  * Some javadoc for DConvex
  * DContactJoint.getContact()
  * Updated Trimesh/Capsule collision (CollideTrimeshCCylinder)

  TODO
  * test getContact()
  * test DBody.getGeomIterator()
  * TriArrayCallback? RayCallback?
  * Clean up Test 0079 and 00XX

  [#76](https://github.com/tzaeschke/ode4j/issues/76)
- Added DQuaternion.copy() and dot() [#117](https://github.com/tzaeschke/ode4j/pull/117)
- Added factory methods and missing API for DRagdoll, DConstrainedBallJoint and DTrimeshHeightfield.
  [#24](https://github.com/tzaeschke/ode4j/issues/24)
- Removed linter warnings when compiling with Java 17. [#116](https://github.com/tzaeschke/ode4j/pull/116)
- DVector3C.cross(). [#115](https://github.com/tzaeschke/ode4j/pull/115)
- DVector3.toDoubleArray(), fromDoubleArray(), fromFloatArray(). [#114](https://github.com/tzaeschke/ode4j/pull/114)
- Turned into tests: DemoI, DemoSpace, DemoSpaceStress. [#110](https://github.com/tzaeschke/ode4j/pull/110)
- Remove or deprecate `Cloneable` and `clone()`. [#109](https://github.com/tzaeschke/ode4j/pull/109)
- DVector3/DQuaternion/...: Better support for call chaining, added isEq(x, y, z, eps) and deprecated clone() and
  DQuaternion.*Euler*().
  [#108](https://github.com/tzaeschke/ode4j/pull/108)
- DVector3/DQuaternion/...: Deprecated hashCode(). [#107](https://github.com/tzaeschke/ode4j/pull/107)
- Removed unnecessary ObjArray from heightfield. [#106](https://github.com/tzaeschke/ode4j/pull/106)
- Added linter and fixed some lint. [#105](https://github.com/tzaeschke/ode4j/pull/105)
- Cleaned up Junit 3 style tests. [#104](https://github.com/tzaeschke/ode4j/pull/104)
- Moved tests into core/core-cpp. [#103](https://github.com/tzaeschke/ode4j/pull/103)
- Cleaned up unit test output. [#102](https://github.com/tzaeschke/ode4j/pull/102)